--- a/Yashar/Yashar.csproj
+++ b/Yashar/Yashar.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Data Structures\LinkedList_Node.cs" />
     <Compile Include="Data Structures\MaxHeap.cs" />
     <Compile Include="Data Structures\MinHeap.cs" />
+    <Compile Include="Data Structures\Treenode.cs" />
     <Compile Include="Data Structures\Trie.cs" />
     <Compile Include="Data Structures\TrieNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
